<resources>
    <string name="app_name">Musix Sleep</string>
    <string name="welcome_back">Welcome Guest</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="remember_me">Remember me</string>
    <string name="let_s_start">LET\'S START</string>
    <string name="musix_sleep">Musix Sleep</string>
    <string name="intro_text">We provide you the best solution for sleep. Just sit back and relax! Fall asleep, we take care of switching off the music!</string>
    <string name="admin">Click here to sign in as admin</string>
    <string name="sign_in_as_admin">Sign in as Admin</string>
    <string name="admin_portal">Admin portal</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="upload_songs">Upload Songs</string>
    <string name="upload_the_songs_here">UPLOAD THE SONGS HERE</string>
    <string name="song_name">Song name</string>
    <string name="song_artist">Song artist</string>
    <string name="raaga">Raaga</string>
    <string name="upload">UPLOAD SONG</string>
    <string name="select_song">Select song</string>
    <string name="no_song_selected">No song selected</string>
    <string name="list_of_the_songs">List of songs</string>
</resources>
