<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StartActivity">


    <RelativeLayout
        android:id="@+id/top_shimmer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_view_container_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/top_text_admin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/musix_sleep"
                android:textAllCaps="true"
                android:textColor="@color/textBlack"
                android:textSize="35sp"
                android:textStyle="bold" />

        </com.facebook.shimmer.ShimmerFrameLayout>

        <TextView
            android:id="@+id/intro_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shimmer_view_container_admin"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:text="@string/upload_the_songs_here"
            android:textAlignment="center"
            android:textColor="@color/textBlack"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_shimmer"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/box5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/song_name"
                app:startIconDrawable="@drawable/raaga_b">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/song_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/box6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/song_artist"
                app:startIconDrawable="@drawable/id_b">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/song_artist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/box7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/raaga"
                app:startIconDrawable="@drawable/music_b">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/song_raaga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/song_select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/select_song"
                    android:textColor="@color/textWhite"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/colorAccent" />

                <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                    android:id="@+id/song_upload_progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mpb_progressStyle="horizontal"
                    style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
                    app:mpb_progressBackgroundTint="@color/textWhite"
                    app:mpb_progressTint="@color/colorAccent" />

            </LinearLayout>

            <TextView
                android:id="@+id/selected_song"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:marqueeRepeatLimit="marquee_forever"
                android:padding="10dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/no_song_selected"
                android:textColor="@color/textBlack"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/song_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:text="@string/upload"
                android:textColor="@color/textWhite"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/colorAccent" />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>